objects/Event__c.object
<CustomObject>
    <fields>
        <fullName>Active_Registrations__c</fullName>
        <label>Active Registrations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Allocated_Funding__c</fullName>
        <label>Allocated Funding</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Client_Funded_Services_Total__c</fullName>
        <label>Client Funded Services Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Client_Income_Outstanding__c</fullName>
        <label>Client Income Outstanding</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Email_Reminders__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Reminders</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Text_Bottom__c</fullName>
        <label>Email Text Bottom</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email_Text_Top__c</fullName>
        <label>Email Text Top</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Date_Time__c</fullName>
        <label>End Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Cost__c</fullName>
        <label>Event Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Event_Description__c</fullName>
        <label>Event Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Event_Short_Description__c</fullName>
        <label>Event Short Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_Status__c</fullName>
        <label>Event Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Community</fullName>
                </value>
                <value>
                    <fullName>Fundraising</fullName>
                </value>
                <value>
                    <fullName>Outreach</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Featured_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Featured Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Application_Date__c</fullName>
        <label>First Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Friendly_URL__c</fullName>
        <label>Friendly URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Gifts__c</fullName>
        <label>Gifts</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Registration_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Group Registration Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Image_URL__c</fullName>
        <label>Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Important_Notice__c</fullName>
        <label>Important Notice</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Last_Application_Date__c</fullName>
        <label>Last Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location_Actual__c</fullName>
        <label>Location Actual</label>
        <summarizedField>Expense__c.Expense_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Expense__c.Expense_Type__c</field>
            <operation>equals</operation>
            <value>Location</value>
        </summaryFilterItems>
        <summaryForeignKey>Expense__c.Event__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Location_Budget__c</fullName>
        <label>Location Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Marketing_Actual__c</fullName>
        <label>Marketing Actual</label>
        <summarizedField>Expense__c.Expense_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Expense__c.Expense_Type__c</field>
            <operation>equals</operation>
            <value>Marketing</value>
        </summaryFilterItems>
        <summaryForeignKey>Expense__c.Event__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Marketing_Budget__c</fullName>
        <label>Marketing Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Capacity__c</fullName>
        <label>Maximum Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Member_Discount_Percentage__c</fullName>
        <label>Member Discount Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Membership_Required__c</fullName>
        <label>Membership Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Online_Until__c</fullName>
        <label>Online Until</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Paid_Event__c</fullName>
        <label>Paid Event</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Funded_Services_Total__c</fullName>
        <label>Partner Funded Services Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_Book__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price Book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>pmdm__Program__c</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Publish_Online__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publish Online</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RSPCA_Funded_Services_Total__c</fullName>
        <label>RSPCA Funded Services Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <label>Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single Session</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Registration_Cut_Off_Date__c</fullName>
        <label>Registration Cut Off Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Remaining_Funding__c</fullName>
        <formula>Allocated_Funding__c - (RSPCA_Funded_Services_Total__c + Total_Expenses__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Funding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Resources_Actual__c</fullName>
        <label>Resources Actual</label>
        <summarizedField>Expense__c.Expense_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Expense__c.Expense_Type__c</field>
            <operation>equals</operation>
            <value>Resources</value>
        </summaryFilterItems>
        <summaryForeignKey>Expense__c.Event__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Resources_Budget__c</fullName>
        <label>Resources Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Room_Name__c</fullName>
        <label>Room Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMS_Reminders__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMS Reminders</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Surveys__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Surveys</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Deliveries__c</fullName>
        <label>Service Deliveries</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date_Time__c</fullName>
        <label>Start Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Target_Registrations__c</fullName>
        <label>Target Registrations</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Description__c</fullName>
        <label>Time Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Total_Actual__c</fullName>
        <label>Total Actual</label>
        <summarizedField>Expense__c.Expense_Amount__c</summarizedField>
        <summaryForeignKey>Expense__c.Event__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Event_Cost__c</fullName>
        <formula>Total_Expenses__c + RSPCA_Funded_Services_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total_Expenses__c + RSPCA_Funded_Services_Total__c</inlineHelpText>
        <label>Total Event Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Expenses__c</fullName>
        <label>Total Expenses</label>
        <summarizedField>Expense__c.Expense_Amount__c</summarizedField>
        <summaryForeignKey>Expense__c.Event__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Turn_Off_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Turn Off Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Turn_Off_SMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Turn Off SMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Waitlist_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Waitlist Enabled</label>
        <type>Checkbox</type>
    </fields>
    <label>Event</label>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <recordTypes>
        <fullName>Multi_Session_Event</fullName>
        <active>true</active>
        <description>An Event that is run across multiple dates and/or locations.</description>
        <label>Multi Session Event</label>
    </recordTypes>
    <recordTypes>
        <fullName>Single_Session_Event</fullName>
        <active>true</active>
        <description>An event that is run within one session at one location.</description>
        <label>Single Session Event</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>